# mixed-hybrid-stokes

./: .gitignore  CMakeLists.txt  Obstructor-02mm.json  Obstructor-02mm.msh  Obstructor-05mm.json  Obstructor-10mm.json  Obstructor-15mm.json  Obstructor-20mm.json  Obstructor-25mm.json  Obstructor-30mm.json  Obstructor-35mm.json  Obstructor-40mm.json  ProblemData.cpp  ProblemData.h  README.md  Reference.json  Reference.msh
Obstruction examples/: MainObstruction.py  TPZCrossObstruction.py  TPZMeshModeling.py  TPZModuleTypology.py  TPZMultipleObstruction.py  TPZRandomObstruction.py  TPZSemiArcObstruction.py  TPZSimpleObstruction.py
Obstruction_examples/: Fracture.py  MainObstruction.py  Reference.json  Reference.msh  TPZMeshModeling.py
examples/: AxisymmetricConstantFlow.json  AxisymmetricHagenPoiseuilleFlow.json  AxisymmetricObstructedAxialFlow.json  AxisymmetricObstructedAxialFlow2.json  AxisymmetricPoiseuilleCouetteFlow.json  AxisymmetricRadialFlow.json  AxisymmetricSlidingCouetteFlow.json
examples/Elasticity/: NotLockingBeam.json  (+4 more)
executable/: 1dtest.cpp  CMakeLists.txt  main.cpp  stokesTH.cpp  testCondense.cpp  testMatrix.cpp  testingBlend3D.cpp
lib/: CMakeLists.txt
mhstokes/: CMakeLists.txt  ProblemData.cpp  ProblemData.h  SimpleExample.cpp  SimpleExample.h  TPZ1dStokesMaterial.cpp  TPZ1dStokesMaterial.h  TPZAxisymStokesMaterial.cpp  TPZAxisymStokesMaterial.h  TPZInterface1dFlux.cpp  TPZInterface1dFlux.h  TPZInterface1dStokesMaterial.cpp  TPZInterface1dStokesMaterial.h  TPZInterfaceAxisymStokesMaterial.cpp  TPZInterfaceAxisymStokesMaterial.h  TPZInterfaceMaterial.cpp  TPZInterfaceMaterial.h  TPZMeshOperator.cpp  TPZMeshOperator.h  TPZMixedLinearElasticMaterial.cpp  TPZMixedLinearElasticMaterial.h  TPZNavierStokesMaterial.cpp  TPZNavierStokesMaterial.h  TPZStokesMaterial.cpp  TPZStokesMaterial.h  TPZStokesMaterialTH.cpp  TPZStokesMaterialTH.h
(+64 files in other folders)
